# counterfact

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_checks.sh
.github/workflows/: ci.yml  claude-code-review.yml
counterfact/: __init__.py  async_engine.py  attribution.py  classifiers.py  cli.py  degradation.py  diagnostics.py  discovery.py  evals.py  export.py  graph.py  llm.py  optimizer.py  orchestration.py  perturbation.py  prompt_analysis.py  recommendations.py  sensitivity.py  spec.py  tool_tracing.py  tracing.py  types.py
counterfact/integrations/: __init__.py  braintrust.py  openai_agents.py
counterfact/tests/: test_async_engine.py  test_attribution.py  test_classifiers.py  test_cli.py  test_degradation.py  test_diagnostics.py  test_discovery.py  test_evals.py  test_export.py  test_graph.py  test_integrations_braintrust.py  test_integrations_openai_agents.py  test_llm.py  test_optimizer.py  test_orchestration.py  test_perturbation.py  test_prompt_analysis.py  test_recommendations.py  test_sensitivity.py  test_skill_counterfact_debugger.py  test_skill_manifest.py  test_tool_tracing.py
counterfact/tests/fixtures/: buggy_pipeline.py
evals/counterfact-debugger/: README.md  grade.py  grade_financebench.py  run_eval.sh  run_eval_financebench.sh
evals/counterfact-debugger/sample_project/: cases.json
evals/counterfact-debugger/sample_project/myrag/: pipeline.py  quality.py
examples/: financebench_case_study.py  financebench_diagnose.py  financebench_diagnose_fixed.py  financebench_improve_prompts.py  financebench_improve_prompts_final.py  financebench_llm_debugger.py  quickstart.py
examples/agents_as_tools_casestudy/: CASE_STUDY.md  __init__.py  make_report.py  run_casestudy.py  system.py
examples/agents_as_tools_skill/: CASE_STUDY.md  __init__.py  make_report.py  run_casestudy.py  system.py
examples/financebench_casestudy/: CASE_STUDY.md  __init__.py  cases.json  compare_fix_order.py  llm.py  make_report.py  pipeline.py  quality.py  run_casestudy.py
examples/financebench_skill/: CASE_STUDY.md  __init__.py  compare_fix_order.py  data.py  llm.py  make_report.py  pipeline.py  progress.py  prompts.py  run_casestudy.py
examples/openai_agents_casestudy/: CASE_STUDY.md  __init__.py  cases.json  make_report.py  run_casestudy.py
examples/openai_agents_skill/: CASE_STUDY.md  __init__.py  agents_shim.py  make_report.py  run_casestudy.py  scorer.py  system.py
examples/rag_degradation_casestudy/: CASE_STUDY.md  __init__.py  cases.json  make_report.py  pipeline.py  run_casestudy.py
examples/rag_degradation_skill/: CASE_STUDY.md  __init__.py  make_report.py  pipeline.py  run_casestudy.py
reports/: agents_as_tools_case_study.html  agents_as_tools_casestudy.json  blog_report.html  financebench_case_study.html  financebench_fix_order.json  financebench_skill_casestudy.json  financebench_skill_casestudy.md  openai_agents_case_study.html  openai_agents_casestudy.json  openai_agents_casestudy.md  rag_degradation_case_study.html  rag_degradation_casestudy.json
skills/counterfact-debugger/: SKILL.md
skills/counterfact-debugger/reference/: ablation-vs-degradation.md  failure-taxonomy.md  practical-limits.md  reading-attribution.md  report-schema.md
skills/counterfact-debugger/scripts/: cf_diagnose.py  llm_fn.py  verify.py
(+1 files in other folders)
