[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "counterfact"
version = "0.1.0"
description = "Deterministic, evidence-driven multi-agent system debugger and evaluator."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Arya Tafvizi", email = "arya@counterfact.ai"}
]
keywords = ["llm", "agents", "langgraph", "debugging", "shapley", "counterfactual"]
dependencies = [
    "langgraph",
    "numpy>=1.20.0"
]

[project.optional-dependencies]
google = ["google-genai"]
anthropic = ["anthropic"]
cli = ["rich>=13.0.0"]
all = ["google-genai", "anthropic", "rich>=13.0.0"]

[project.scripts]
counterfact = "counterfact.cli:main"

[tool.setuptools]
packages = ["counterfact"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
